--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "akaunting/signed-url",
+    "name": "conttas/laravel-signed-url",
     "description": "Signed (unique) URL package for Laravel.",
     "keywords": [
         "laravel",
